# CouldntMatchTypeRepro

./: .gitignore  README.md  stack.yaml
model/: model.cabal
model/src/Types/: Ids.hs
model/test/: NotWorking.hs
testing/: testing.cabal
testing/src/Test/: Ids.hs
