name:              model
version:           0.0.0
cabal-version:     >= 1.10
build-type:        Simple

library
    hs-source-dirs:  src
    exposed-modules: Types.Ids

    ghc-options:   -Wall -fwarn-tabs -O2
    default-language: Haskell2010

    build-depends: base
                 , classy-prelude
                 , text
                 , uuid

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    default-language:  Haskell2010
    ghc-options:       -Wall
    other-modules: NotWorking

    build-depends: base
                 , hspec
                 , hspec-core
                 , text
                 , model
                 , testing
