name:                testing
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Test.Ids
  build-depends:       base
                     , text
                     , model
  hs-source-dirs:      src
  default-language:    Haskell2010
